--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,9 +20,7 @@
 
 title: Niklas' Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi, this is my blog where I'm posting about any fun projects I'm working on.
 github_username:  nhauber99
 
 domain: nhauber99.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
