--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Niklas' Blog
+title: Niklas' Tech Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi, this is my blog where I'm posting about any fun projects I'm working on.
+  Hi, I'm Niklas and this is my blog where I'm posting about interesting projects I'm working on.
 github_username:  nhauber99
 
 domain: nhauber99.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
